<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_weight="0.93"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:id="@+id/todo_linear_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:textSize="17dp"
                android:gravity="center"
                android:id="@+id/todoName"
                android:text="@string/todo_name" />

            <TextView
                android:text="@string/content"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:id="@+id/todoContent"
                android:layout_weight="0.58" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_weight="0.05">

                <TextView
                    android:text="@string/date_added_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:id="@+id/date_added"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/due_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:id="@+id/due_date"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.35">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02" />

                <CheckBox
                    android:text="@string/is_completed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/completed_checkBox"
                    android:layout_weight="0.00" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:text="@string/previous_btn_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:id="@+id/prevBtn"
            android:layout_weight="0.55" />

        <Button
            android:text="@string/next_btn_text"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextBtn"
            android:layout_weight="0.83" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/edit_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_todo_button"
            android:layout_weight="1" />

        <Button
            android:text="@string/add_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_todo_button"
            android:layout_weight="1.11" />

    </LinearLayout>
</LinearLayout>