<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_text"
        android:textSize="36sp"
        tools:text="Add Todo"
        android:textAlignment="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:columnCount="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/todo_name"
                android:textSize="24sp"
                android:text="@string/name_label"
                tools:text="Name:"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_weight="0.3" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/nameEditText"
                android:layout_weight="0.7" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/todo_content"
                android:textSize="24sp"
                android:text="@string/content_label"
                tools:text="Content:"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_weight="0.3" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/contentEditText"
                android:layout_weight="0.7" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/todo_dateCreated"
                android:textSize="24sp"
                android:text="@string/date_created_label"
                tools:text="Date Created:"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_weight="0.3" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/dateCreatedEditText"
                android:layout_weight="0.7" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/todo_dueDate"
                android:textSize="24sp"
                android:text="@string/content_label"
                tools:text="Due Date:"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_weight="0.3" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/dueDateEditText"
                android:layout_weight="0.7" />

        </TableRow>






        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debug_model" />

    <Button
        android:text="Save Todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_button" />
</LinearLayout>